k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-demo-service
spec:
  selector:
    app: laravel-demo
  ports:
    - port: 80
      targetPort: 8000
